various sonar cloud code smell fixes implemented